--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <section class="section">
     <h2>¿Quienes somos?</h2>
-    <p>spacenotdev (SQ7AD) es una de las squads más conocidas y activas de Discord. Nos dedicamos a crear comunidad, jugar juntos y dominar cualquier servidor. 💀🔥</p>
+    <p>spacenotdev (SQ7AD) es una de las squads más conocidas y activas de Discord. Nos dedicamos a crear comunidad, y dominar cualquier servidor. 💀🔥</p>
     <a href="https://discord.gg/sXaKwafgcx" target="_blank">
       <button class="btn">Presiona aqui.</button>
     </a>
